--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "php": ">=5.5.0",
         "symfony/framework-bundle": "^2.5|^3.0",
         "cron/cron": "^1.0.1",
-        "doctrine/doctrine-bundle": "^1.8",
-        "doctrine/orm": "^2.5"
+        "doctrine/doctrine-bundle": "^1.8"
     },
     "autoload": {
         "psr-4" : {
