--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": ">=5.5.0",
         "symfony/framework-bundle": "^2.5|^3.0",
         "cron/cron": "^1.0.1",
-        "doctrine/doctrine-bundle": "^1.8"
+        "doctrine/doctrine-bundle": "^1.8",
+	"doctrine/orm": "~2.3"
     },
     "autoload": {
         "psr-4" : {
